--- a/RiotGamesApi.AspNetCore.nuspec
+++ b/RiotGamesApi.AspNetCore.nuspec
@@ -33,5 +33,10 @@
         <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.deps.json" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.deps.json" />
         <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.dll" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.dll" />
         <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp1.1\RiotGamesApi.AspNetCore.xml" target="lib\netcoreapp11\RiotGamesApi.AspNetCore.xml" />
+
+
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp2.0\RiotGamesApi.AspNetCore.deps.json" target="lib\netcoreapp20\RiotGamesApi.AspNetCore.deps.json" />
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp2.0\RiotGamesApi.AspNetCore.dll" target="lib\netcoreapp20\RiotGamesApi.AspNetCore.dll" />
+        <file src="RiotGamesApi.AspNetCore\bin\Release\netcoreapp2.0\RiotGamesApi.AspNetCore.xml" target="lib\netcoreapp20\RiotGamesApi.AspNetCore.xml" />
     </files>
 </package>
