--- a/RiotGamesApi.AspNetCore.nuspec
+++ b/RiotGamesApi.AspNetCore.nuspec
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>RiotGamesApi.AspNetCore</id>
@@ -23,6 +23,15 @@
                 <dependency id="DeepCloner" version="0.10.1" />
                 <dependency id="Microsoft.Extensions.DependencyInjection" version="1.1.1" />
                 <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2" />
+                <dependency id="Newtonsoft.Json" version="10.0.3" />
+                <dependency id="RiotGamesApi" version="1.9.28.2145" />
+            </group>    
+            <group targetFramework=".NETCoreApp2.0">
+                <dependency id="Microsoft.NETCore.App" version="2.0.0" />
+                <dependency id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.0" />
+                <dependency id="DeepCloner" version="0.10.1" />
+                <dependency id="Microsoft.Extensions.DependencyInjection" version="2.0.0" />
+                <dependency id="Microsoft.Extensions.Caching.Memory" version="2.0.0" />
                 <dependency id="Newtonsoft.Json" version="10.0.3" />
                 <dependency id="RiotGamesApi" version="1.9.28.2145" />
             </group>
